# MiERP

./: .env.development  .env.local  .gitignore  .gitignore copy  Datos.md  ESTRUCTURA.md  Funciones.md  Info.md  Notas.md  Paso 1.docx  Propuesta.md  Seguridad.md  gitignore.md  mejoras.md  pyproject.toml  setup.py
backend/: .env copy  .env copy 2  .env.example  init_superadmin.py  package-lock.json  package.json  requirements copy 2.txt  requirements copy 3.txt  requirements copy.txt  requirements-dev.txt  requirements.txt  requirements2.txt
backend/app/: api.py  main copy 2.py  main copy 3.py  main copy 4.py  main copy.py  main.py
backend/app/core/: config copy 2.py  config copy 3.py  config copy 4.py  config copy.py  config.py  database copy 2.py  database.py  secrets_manager.py  security.py
backend/app/dependencies/: roles copy 2.py  roles copy.py  roles.py
backend/app/models/: credit_note.py  customer.py  product copy 2.py  product copy 3.py  product copy.py  product.py  purchase_order copy 2.py  purchase_order copy.py  purchase_order.py  reception.py  shared copy 2.py  shared copy.py  shared.py  user.py  (+1 more)
backend/csv/: avance_productos_backup_2025-07-21.csv  ejemplo_productos_backup_2025-07-18.csv  ejemplo_productos_backup_2025-07-21.csv  productos_backup_2025-07-18.xlsx  prueba_productos_backup_2025-07-18.csv
backend/scripts/: create_superadmin.py  seed_roles.py
backend/secure/: initial_credentials.json
frontend/: package copy.json  package-lock.json  package.json
frontend/src/: App copy.js  App.js  index copy 2.js  index copy.js  index.js  main.js
(+454 files in other folders)
